--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <!-- css -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
+
+    <!-- js -->
+    <script src="js/slideMenu.js" defer></script>
 </head>
 <body>
     <header id="header">
@@ -259,7 +262,65 @@
                     </div>
                 </div>
                 <div class="mobile-container">
-
+                    <div class="slide-menu-box">
+                        <ul class="slide-menu-list">
+                            <li>
+                                <a href="#" class="slide-menu">
+                                    <img src="img/mobile_menu_01.webp" alt="best sellers" width="72px">
+                                    <div class="menu-title">BEST SELLERS</div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="slide-menu">
+                                    <img src="img/mobile_menu_02.webp" alt="last chance" width="72px">
+                                    <div class="menu-title">Last Chance</div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="slide-menu">
+                                    <img src="img/mobile_menu_03.webp" alt="necklaces" width="72px">
+                                    <div class="menu-title">NECKLACES</div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="slide-menu">
+                                    <img src="img/mobile_menu_04.webp" alt="earrings" width="72px">
+                                    <div class="menu-title">EARRINGS</div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="slide-menu">
+                                    <img src="img/mobile_menu_05.webp" alt="rings" width="72px">
+                                    <div class="menu-title">RINGS</div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="slide-menu">
+                                    <img src="img/mobile_menu_06.webp" alt="bracelets" width="72px">
+                                    <div class="menu-title">BRACELETS</div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="slide-menu">
+                                    <img src="img/mobile_menu_07.webp" alt="new" width="72px">
+                                    <div class="menu-title">NEW</div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="slide-menu">
+                                    <img src="img/mobile_menu_08.webp" alt="bundles" width="72px">
+                                    <div class="menu-title">BUNDLES</div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="slide-menu">
+                                    <img src="img/mobile_menu_09.webp" alt="solid gold" width="72px">
+                                    <div class="menu-title">SOLID GOLD</div>
+                                </a>
+                            </li>
+                            
+                        </ul>
+                    </div>
                 </div>
             </div>
         </nav>
