--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- css -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <!-- js -->
     <script src="js/slideMenu.js" defer></script>
@@ -61,7 +62,7 @@
                 </div>
 
                 <div class="header-top_center">
-                    <a href="index.html" id="header_logo"><img src="img/logo_img.png" alt="logo" width="112px"></a>
+                    <a href="index.html" id="header_logo"><img src="img/logo_img.png" alt="logo" width="120px"></a>
                 </div>
 
                 <div class="header-top_right">
@@ -326,5 +327,25 @@
         </nav>
     </header>
     
+    <!-- 메인화면 시작 -->
+    <div class="content-container">
+        <div class="main-img-container">
+            <img class="pc_main_img" src="img/main_img_pc.jpg" alt="main img" width="100%">
+            <img class="mobile_main_img" src="img/main_img_mobile.jpg" alt="mobile main img" width="100%">
+            <div class="main-img-content">
+                <p>NEW YEAR,NEW YOU</p>
+                <h2>SPARKLE & SHINE INTO 2024</h2>
+                <div class="banner-button-box">
+                    <button>SHOP BEST SELLERS</button>
+                    <button>SHOP EARRINGS</button>
+                </div>
+            </div>
+        </div>
+        <div class="row-info-container">
+            <img class="row_info_pc" src="img/row_info_pc.jpg" width="100%">
+            <img class="row_info_mobile" src="img/row_info_mobile.jpg" width="100%">
+        </div>
+    </div>
+    <!-- category 시작 -->
 </body>
 </html>
