--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/category.css">
+    <link rel="stylesheet" href="css/review.css">
+    <link rel="stylesheet" href="css/new.css">
 
     <!-- js -->
     <script src="js/slideMenu.js" defer></script>
@@ -383,7 +385,7 @@
             </div>
             <div class="standard">
                 <div class="standard-info">
-                    <h3 class="standard-title">JEWELRY WITH STANDARDS.</h3>
+                    <h3 class="section_title">JEWELRY WITH STANDARDS.</h3>
                     <p class="standard-description">
                         Everyday, tarnish-free pieces made to last. Backed by a 2-Year Warranty to keep you happy (and the planet, too).
                     </p>
@@ -398,59 +400,205 @@
                 </div>
             </div>
         </section>
+        <!-- 5 start reviews -->
         <section class="reviews">
             <div class="review-top">
                 <h2 class="section_title">
                     50,000+ FIVE STAR REVIEWS
                 </h2>
                 <div class="slide-btn">
-                    <span class="material-symbols-outlined">
+                    <span class="material-symbols-outlined" id="btn-off">
                         arrow_circle_left
                     </span>
                     <span class="material-symbols-outlined">
                         arrow_circle_right
                     </span>
                 </div>
-                <div class="review-bottom">
-                    <div class="review">
-                        <div class="stars">
-                            <img src="img/starts.png" alt="">
-                        </div> 
-                        <p class="review_text">
-                            Absolutely love these earrings. No tarnishing
-                            even though I wear then in the shower often. I get 
-                            compliments all the time!! Hoping to get the blue ones soon!
-                        </p>
-                        <p class="review_user">Alena M.</p>
-                    </div>
-                    <div class="review">
-                        <div class="stars">
-                            <img src="img/starts.png" alt="">
-                        </div> 
-                        <p class="review_text">
-                            Absolutely love these earrings. No tarnishing
-                            even though I wear then in the shower often. I get 
-                            compliments all the time!! Hoping to get the blue ones soon!
-                        </p>
-                        <p class="review_user">Alena M.</p>
-                    </div>
-                    <div class="review">
-                        <div class="stars">
-                            <img src="img/starts.png" alt="">
-                        </div> 
-                        <p class="review_text">
-                            Absolutely love these earrings. No tarnishing
-                            even though I wear then in the shower often. I get 
-                            compliments all the time!! Hoping to get the blue ones soon!
-                        </p>
-                        <p class="review_user">Alena M.</p>
-                    </div>
+            </div>
+            <div class="review-bottom">
+                <div class="review">
+                    <div class="stars">
+                        <img src="img/starts.png" alt="5 stars" width="110px">
+                    </div> 
+                    <p class="review_text">
+                        Absolutely love these earrings. No tarnishing
+                        even though I wear then in the shower often. I get 
+                        compliments all the time!! Hoping to get the blue ones soon!
+                    </p>
+                    <p class="review_user">Alena M. <span class="material-symbols-outlined check">
+                        check_circle
+                        </span></p>
+                </div>
+                <div class="review">
+                    <div class="stars">
+                        <img src="img/starts.png" alt="5 stars" width="110px">
+                    </div> 
+                    <p class="review_text">
+                        Love everything Ana Luisa! I get so many compliments on them,
+                        and the quality is amazing. I wear mine everyday and there
+                        has been no tarnishing or fading.
+                    </p>
+                    <p class="review_user">Taylor S. <span class="material-symbols-outlined check">
+                        check_circle
+                        </span></p>
+                </div>
+                <div class="review">
+                    <div class="stars">
+                        <img src="img/starts.png" alt="5 stars" width="110px">
+                    </div> 
+                    <p class="review_text">
+                       The earrings you don't feel at all when in your ears! 
+                       I sleep with then and they don't bother me at all! Great 
+                       quality and delicate. It's also water resistant which I appreciate.
+                    </p>
+                    <p class="review_user">Molly R. <span class="material-symbols-outlined check">
+                        check_circle
+                        </span></p>
                 </div>
             </div>
-            
-
         </section>
+        <!-- new arrivals -->
+        <section class="new-arrivals">
+            <div class="new-top">
+                <h2 class="section_title">
+                    NEW ARRIVALS
+                </h2>
+                <div class="slide-btn">
+                    <span class="material-symbols-outlined" id="btn-off">
+                        arrow_circle_left
+                    </span>
+                    <span class="material-symbols-outlined">
+                        arrow_circle_right
+                    </span>
+                </div>
+            </div>
+            <div class="new-bottom">
+                <div class="new">
+                    <div class="new_item_img new01">&nbsp;</div>
+                    <p class="new_item_name">INVISIBLE SET STUDS SMALL</p>
+                    <p class="new_item_price">$45</p>
+                </div>
+                <div class="new">
+                    <div class="new_item_img new02">&nbsp;</div>
+                    <p class="new_item_name">KIARA</p>
+                    <p class="new_item_price">$65</p>
+                </div>
+                <div class="new">
+                    <div class="new_item_img new03">&nbsp;</div>
+                    <p class="new_item_name">GOLD SLIM HOOPS SET</p>
+                    <p class="new_item_price">$170</p>
+                </div>
+                <div class="new">
+                    <div class="new_item_img new04">&nbsp;</div>
+                    <p class="new_item_name">COLS STUD SET</p>
+                    <p class="new_item_price">$350</p>
+                </div>
+            </div>
+        </section>
+        <!-- selling out -->
+        <section class="new-arrivals">
+            <div class="new-top">
+                <h2 class="section_title">
+                    THESE STYLES ARE SELLING OUT FAST!
+                </h2>
+                <div class="slide-btn">
+                    <span class="material-symbols-outlined" id="btn-off">
+                        arrow_circle_left
+                    </span>
+                    <span class="material-symbols-outlined">
+                        arrow_circle_right
+                    </span>
+                </div>
+            </div>
+            <div class="new-bottom">
+                <div class="new">
+                    <div class="new_item_img product01">&nbsp;</div>
+                    <p class="new_item_name">LETTER NECKLACE</p>
+                    <p class="new_item_price">$65</p>
+                </div>
+                <div class="new">
+                    <div class="new_item_img product02">&nbsp;</div>
+                    <p class="new_item_name">ASH DOUBLE</p>
+                    <p class="new_item_price">$75</p>
+                </div>
+                <div class="new">
+                    <div class="new_item_img product03">&nbsp;</div>
+                    <p class="new_item_name">HARLEY</p>
+                    <p class="new_item_price">$65</p>
+                </div>
+                <div class="new">
+                    <div class="new_item_img product04">&nbsp;</div>
+                    <p class="new_item_name">FRIDA</p>
+                    <p class="new_item_price">$55</p>
+                </div>
+            </div>
+        </section>
+        <footer class="footer-container">
+            <div class="footer-left-conetnet">
+                <div class="footer-con">
+                    <p class="footer-con-title">#ANALUISA</p>
+                    <ul class="footer-con-list">
+                        <li>Our mission</li>
+                        <li>Club AL</li>
+                        <li>Influencers</li>
+                        <li>Careers</li>
+                    </ul>
+                </div>
+                <div class="footer-con">
+                    <p class="footer-con-title">CUSTOMER CARE</p>
+                    <ul class="footer-con-list">
+                        <li>Track my order</li>
+                        <li>Retruns & Exchanges</li>
+                        <li>FAQs</li>
+                        <li>Corporate Gifting</li>
+                        <li>Wholesale Inquiries</li>
+                    </ul>
+                </div>
+                <div class="footer-con">
+                    <p class="footer-con-title">CONTACT US</p>
+                    <ul class="footer-con-list">
+                        <li>9AM-8PM EST</li>
+                        <li><span class="material-symbols-outlined">
+                            send
+                            </span>
+                            Email
+                        </li>
+                        <li>
+                            <span class="material-symbols-outlined">
+                                sms
+                                </span>
+                            Chat Now</li>
+                        <li><span class="material-symbols-outlined">
+                            call
+                            </span>
+                            +1 (844)-123-4567(Text only)</li>
+                    </ul>
+                </div>
+            </div>
 
+            <div class="footer-right-conetnet">
+                <h4 class="footer-right-title">
+                    BE THE FIRST TO KNOW!
+                </h4>
+                <div class="footer-right-text">
+                    Sign up to receive insider information on 
+                    exclusive offers and new arrivals.
+                </div>
+                <div class="footer-email">
+                    <div class="email-bar">
+                        Enter Email
+                    </div>
+                    <div class="send-btn">
+                        <span class="material-symbols-outlined">
+                            arrow_circle_right
+                            </span>
+                    </div>
+                </div>
+                <div class="sns-icon">
+                    
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
