--- a/product_01.html
+++ b/product_01.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/review.css">
     <link rel="stylesheet" href="css/new.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/product.css">
 
     <!-- js -->
     <script src="js/slideMenu.js" defer></script>
@@ -341,6 +342,63 @@
                     Home / Earrings / Stud Earrings / Flower Stud Earrings - Rosalie
                 </div>
             </div>
+            <!-- 제품 사진과  제품정보-->
+            <div class="product-container">
+                <div class="product-img-container">
+                    <div class="product-img">
+                        <img src="img/detail_img_01.jpg" alt="상품 이미지" width="100%">
+                    </div>
+                    <div class="product-img">
+                        <img src="img/detail_img_02.jpg" alt="상품 이미지" width="100%">
+                    </div>
+                    <div class="product-img">
+                        <img src="img/detail_img_03.jpg" alt="상품 이미지" width="100%">
+                    </div>
+                    <div class="product-img">
+                        <img src="img/detail_img_04.jpg" alt="상품 이미지" width="100%">
+                    </div>
+                    <div class="product-img">
+                        <img src="img/detail_warranty_img.jpg" alt="상품 이미지" width="100%">
+                    </div>
+                    <div class="product-img">
+                        <img src="img/detail_img_05.jpg" alt="상품 이미지" width="100%">
+                    </div>
+                </div>
+                <div class="product-info-container">
+                    <div class="info_text_01">
+                        <h2 class="product_name">ROSALIE</h2>
+                        <div class="product_price">$55</div>
+                    </div>
+                    <div class="info_text_02">Flower Stud Earrings</div>
+                    <div class="info_text_03">
+                        <div class="review-star"></div>
+                        <div class="rate">4.93 (14 reviews)</div>
+                    </div>
+                    <div class="add-btn">
+                        <button>ADD TO CART</button>
+                    </div>
+                    <div class="info_text_04">
+                        <span class="red-light">&nbsp;</span>
+                        1288 items purchased in the last 24 hours
+                    </div>
+                    <div class="info_text_05">
+                        Estimated Delivery by <span class="font-bold">Mon, Jan 29</span>
+                    </div>
+                    <div class="info_text_06">
+                        <div class="text_title_container">
+                            <h3 class="text-title">Self-Love Sale</h3>
+                            <p class="text-sub-title">Get up to 25% off</p>
+                        </div>
+                        <div class="notice-txt">Code automatically applied at checkout.
+                            Exclustions apply. <span class="underline">Order deadlines.</span>
+                        </div>
+                    </div>
+                    
+
+                </div>
+
+            </div>
+
         </main>
     </div>
     
