--- a/product_01.html
+++ b/product_01.html
@@ -371,7 +371,9 @@
                     </div>
                     <div class="info_text_02">Flower Stud Earrings</div>
                     <div class="info_text_03">
-                        <div class="review-star"></div>
+                        <div class="review-star">
+                            <img src="./img/stars.png" alt="review star" width="100%" height="100%">
+                        </div>
                         <div class="rate">4.93 (14 reviews)</div>
                     </div>
                     <div class="add-btn">
@@ -393,7 +395,79 @@
                             Exclustions apply. <span class="underline">Order deadlines.</span>
                         </div>
                     </div>
-                    
+                    <div class="info_text_07">
+                        <ul class="service_info">
+                            <li><span class="material-symbols-outlined">
+                                sync_alt
+                                </span>
+                                Free Shipping  &amp; Exchanges
+                            </li>
+                            <li>
+                                <span class="material-symbols-outlined">
+                                    stars
+                                </span>
+                                Tarnishing Resistant  &amp; Hypoallergenic
+                            </li>
+                            <li>
+                                <span class="material-symbols-outlined">
+                                    priority
+                                </span>
+                                2-Year Warranty
+                            </li>
+                            <li>
+                                <span class="material-symbols-outlined">
+                                    family_star
+                                </span>
+                                600,000 happy customers
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="info-text-08">
+                        <div class="info-button clicked">Quality
+                            <div class="info-detail">
+                                <p>Ana Luisa offers a 2-Year Warranty on all products.</p>
+                                <p>Every single piece of jewelry is rigorously tested and guaranteed to be long lasting, hypoallergenic and water resistant.</p>
+                                <p>If for any reason you are not satisfied with your purchase, our 2 year warranty has you covered. No risk, all rewards.</p>
+                                <span>Read more</span>
+                            </div>
+                        </div>
+                        <div class="info-button">Deatils
+                            <div class="info-detail">
+                                <div class="detail-item">
+                                    <p>Materials</p>
+                                    <p>14K Gold on Sterling Silver</p>
+                                </div>
+                                <div class="detail-item">
+                                    <p>Width</p>
+                                    <p>6.8mm - 0.27"</p>
+                                </div>
+                                <div class="detail-item">
+                                    <p>Thickness</p>
+                                    <p>3.5mm - 0.14"</p>
+                                </div>
+                                <div class="detail-item">
+                                    <p>Weight</p>
+                                    <p>0.45g</p>
+                                </div>
+                                <div class="detail-item">
+                                    <p>Clasp</p>
+                                    <p>Post</p>
+                                </div>
+                                <div class="detail-item">
+                                    <p>Post</p>
+                                    <p>Surgical Steel</p>
+                                </div>
+                                
+                            </div>
+                        </div>
+                        <div class="info-button clicked">Care
+                            <div class="info-detail">
+                                <p>Our jewelry is designed to be water-resistant, so you don't have to worry about taking it off when you're near water. However, we recommend limiting prolonged exposure to water to keep your jewelry looking its best.</p>
+                                <p>When you're not wearing your pieces, we suggest storing them in the original Ana Luisa pouch in a cool, dry place to help maintain their luster and extend their lifespan.</p>
+                                <p>For more details, check out our<span>Jewelry care page.</span></p>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
 
