--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
             <div class="review-bottom">
                 <div class="review">
                     <div class="stars">
-                        <img src="img/starts.png" alt="5 stars" width="110px">
+                        <img src="img/stars.png" alt="5 stars" width="110px">
                     </div> 
                     <p class="review_text">
                         Absolutely love these earrings. No tarnishing
@@ -432,7 +432,7 @@
                 </div>
                 <div class="review">
                     <div class="stars">
-                        <img src="img/starts.png" alt="5 stars" width="110px">
+                        <img src="img/stars.png" alt="5 stars" width="110px">
                     </div> 
                     <p class="review_text">
                         Love everything Ana Luisa! I get so many compliments on them,
@@ -445,7 +445,7 @@
                 </div>
                 <div class="review">
                     <div class="stars">
-                        <img src="img/starts.png" alt="5 stars" width="110px">
+                        <img src="img/stars.png" alt="5 stars" width="110px">
                     </div> 
                     <p class="review_text">
                        The earrings you don't feel at all when in your ears! 
