--- a/index.html
+++ b/index.html
@@ -476,8 +476,8 @@
             </div>
             <div class="new-bottom">
                 <div class="new">
-                    <a href="product_01.html"><div class="new_item_img"><img src="img/new_img_01.jpg" width="100%" height="100%"></div></a>
-                    <p class="new_item_name">ROSALIE</p>
+                    <div class="new_item_img"><a href="product_01.html"><img src="img/new_img_01.jpg" width="100%" height="100%"></a></div>
+                    <a href="product_01.html"><p class="new_item_name">ROSALIE</p></a>
                     <p class="new_item_price">$55</p>
                 </div>
                 <div class="new">
