--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <!-- js -->
     <script src="js/slideMenu.js" defer></script>
     <script src="js/scrollHide.js" defer></script>
+    <script src="js/hamburger.js" defer></script>
 </head>
 <body>
     <header id="header" >
@@ -326,6 +327,51 @@
                             </li>
                             
                         </ul>
+                    </div>
+                </div>
+                <div class="hamburger-menu-container">
+                    <div class="menu-title">
+                        <h2 class="menu-logo">
+                            <img src="img/logo_img.png" alt="ana luisa logo" width="100%">
+                        </h2>
+                        <div class="close-btn"><span class="material-symbols-outlined">
+                            cancel
+                            </span></div>
+                    </div>
+                    <div class="hamburger-menu-box">
+                        <div class="menu-box"><div class="bg-img best"><p>Best Sellers</p></div></div>
+                        <div class="menu-box"><div class="bg-img featured"><p>Featured</p></div></div>
+                        <div class="menu-box"><div class="bg-img earrings"><p>Earrings</p></div></div>
+                        <div class="menu-box"><div class="bg-img necklaces"><p>Necklaces</p></div></div>
+                        <div class="menu-box"><div class="bg-img ring"><p>Bracelets & Rings</p></div></div>
+                        <div class="menu-box"><div class="bg-img gold"><p>Solid Gold</p></div></div>
+                        <div class="menu-box"><div class="bg-img last">&nbsp;</div></div>
+                    </div>
+                    <div class="hamburger-menu-bottom">
+                        <div class="bottom-top-box">
+                            <div class="top-left-box">
+                                <a href="#">About Us</a>
+                                <a href="#">Rewards</a>
+                            </div>
+                            <div class="top-right-box">
+                                <p> <span class="material-symbols-outlined">
+                                    deployed_code
+                                    </span> 
+                                    Track My Order</p>
+                                <p><span class="material-symbols-outlined">
+                                    home_pin
+                                    </span>
+                                    Store</p>
+                                <p><span class="material-symbols-outlined">
+                                    info
+                                    </span>
+                                    Information</p>
+                            </div>
+                        </div>
+                        <div class="bottom-down-box">
+                            <div class="login">LOG IN</div>
+                            <div class="signup">SIGN UP</div>
+                        </div>
                     </div>
                 </div>
             </div>
