--- a/product_01.html
+++ b/product_01.html
@@ -27,6 +27,7 @@
     <script src="js/infoBoxBtn.js" defer></script>
     <script src="js/clickImg.js" defer></script>
     <script src="js/hamburger.js" defer></script>
+    <script src="js/productImgSlide.js" defer></script>
 
 
     
@@ -565,14 +566,14 @@
             <div class="inspired-container">
                 <div class="inspired-title-box">
                     <h3 class="inspired-title">GET INSPIRED</h3>
-                    <div class="slide-btn">
+                    <!-- <div class="slide-btn">
                         <span class="material-symbols-outlined" id="btn-off">
                             arrow_circle_left
                         </span>
                         <span class="material-symbols-outlined">
                             arrow_circle_right
                         </span>
-                    </div>
+                    </div> -->
                 </div>
                 
                 <div class="inspired-img-box">
@@ -998,35 +999,61 @@
                         <h2 class="section_title">
                             PREVIOUSLY SEEN
                         </h2>
-                        <div class="slide-btn">
-                            <span class="material-symbols-outlined" id="btn-off">
+                        <div class="slide-btn" id="new_slide_btn">
+                            <span class="material-symbols-outlined prev">
                                 arrow_circle_left
                             </span>
-                            <span class="material-symbols-outlined">
+                            <span class="material-symbols-outlined next btn-on" >
                                 arrow_circle_right
                             </span>
                         </div>
                     </div>
-                    <div class="new-bottom">
-                        <div class="new">
-                            <div class="new_item_img new01"><img src="img/product_05.jpg" width="100%" height="100%"></div>
-                            <p class="new_item_name">LEX MALACHITE</p>
-                            <p class="new_item_price">$65</p>
-                        </div>
-                        <div class="new">
-                            <div class="new_item_img new02"><img src="img/product_06.jpg" width="100%" height="100%"></div>
-                            <p class="new_item_name">GLORIA</p>
-                            <p class="new_item_price">$65</p>
-                        </div>
-                        <div class="new">
-                            <div class="new_item_img new03"><img src="img/product_07.jpg" width="100%" height="100%"></div>
-                            <p class="new_item_name">LEIA</p>
-                            <p class="new_item_price">$55</p>
-                        </div>
-                        <div class="new">
-                            <div class="new_item_img new04"><img src="img/product_08.jpg" width="100%" height="100%"></div>
-                            <p class="new_item_name">ALIX</p>
-                            <p class="new_item_price">$75</p>
+                    <div class="slide_wrap">
+                        <div class="slide_all">
+                            <div class="new-bottom slide_page">
+                                <div class="new">
+                                    <div class="new_item_img new01"><img src="img/product_05.jpg" width="100%" height="100%"></div>
+                                    <p class="new_item_name">LEX MALACHITE</p>
+                                    <p class="new_item_price">$65</p>
+                                </div>
+                                <div class="new">
+                                    <div class="new_item_img new02"><img src="img/product_06.jpg" width="100%" height="100%"></div>
+                                    <p class="new_item_name">GLORIA</p>
+                                    <p class="new_item_price">$65</p>
+                                </div>
+                                <div class="new">
+                                    <div class="new_item_img new03"><img src="img/product_07.jpg" width="100%" height="100%"></div>
+                                    <p class="new_item_name">LEIA</p>
+                                    <p class="new_item_price">$55</p>
+                                </div>
+                                <div class="new">
+                                    <div class="new_item_img new04"><img src="img/product_08.jpg" width="100%" height="100%"></div>
+                                    <p class="new_item_name">ALIX</p>
+                                    <p class="new_item_price">$75</p>
+                                </div>
+                            </div>
+                            <div class="new-bottom slide_page">
+                                <div class="new">
+                                    <div class="new_item_img new01"><img src="img/product_13.jpg" width="100%" height="100%"></div>
+                                    <p class="new_item_name">SUMMER SILVER</p>
+                                    <p class="new_item_price">$115</p>
+                                </div>
+                                <div class="new">
+                                    <div class="new_item_img new02"><img src="img/product_14.jpg" width="100%" height="100%"></div>
+                                    <p class="new_item_name">FLOATING DIAMOND CHARM LARGE</p>
+                                    <p class="new_item_price">$140</p>
+                                </div>
+                                <div class="new">
+                                    <div class="new_item_img new03"><img src="img/product_15.jpg" width="100%" height="100%"></div>
+                                    <p class="new_item_name">ADRIANNA SET</p>
+                                    <p class="new_item_price">$95</p>
+                                </div>
+                                <div class="new">
+                                    <div class="new_item_img new04"><img src="img/product_16.jpg" width="100%" height="100%"></div>
+                                    <p class="new_item_name">STARSTRUCK BUNDLE</p>
+                                    <p class="new_item_price">$185</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </section>
